# salva-godinez

./: .gitignore  BuscadorExcel.ps1  BuscadorExcel.py  CHANGELOG.md  CONTRIBUTORS.md  README.md  ROADMAP_FIXES.md  SalvaGodinez.spec  config.py  main.py  pyproject.toml  requirements.txt  utils.py
legacy/: BuscadorExcel.py
reporting/: console_report.py
searchers/: disk_search.py  recent_files.py  recycle_bin.py  shadow_copies.py  temp_files.py
tools/: __init__.py  _fiscal_helpers.py  disk_cleaner.py  excel_cell_cleaner.py  excel_comparator.py  excel_consolidator.py  file_unlocker.py  ghost_printers.py  image_converter.py  net_drive.py  password_generator.py  pdf_tools.py  ping_checker.py  prestaciones_sim.py  printer_share.py  retention_calculator.py  salary_calculator.py  spooler.py  system_info.py  updater.py  usb_backup.py  usb_disinfect.py  usb_eject.py  usb_health.py  wifi_passwords.py
